[package]

name = "rdump"
version = "0.1.0"
authors = [ "davidb@davidb.org" ]

[dependencies]
fourcc = "*"
rustc-serialize = "*"
# uuid = "*"

# [dependencies.sqlite3]
# Unmerged pull requests are pending.
# git = "https://github.com/linuxfood/rustsqlite"
# path = "../rustsqlite"

# [dependencies.uuid]
# git = "https://github.com/rust-lang/uuid"

[lib]

name = "libpool"
path = "src/libpool/lib.rs"
crate_type = ["dylib", "rlib"]

[[bin]]

name = "rdump"
test = false
