[package]

name = "rdump"
version = "0.1.0"
authors = [ "davidb@davidb.org" ]

[dependencies]
fourcc = "*"
rustc-serialize = "*"
# sqlite3 = "*"
uuid = "*"
flate2 = "*"
log = "*"
tempdir = "*"

# [dependencies.sqlite3]
# path = "lib/sqlite3"

[lib]

name = "libpool"
path = "src/libpool/lib.rs"
# crate_type = ["dylib", "rlib"]
crate_type = ["rlib"]

[[bin]]
name = "rdump"
test = false
