[package]

name = "cas"
version = "0.1.1"
authors = [ "David Brown <davidb@davidb.org>" ]
license = "MIT"
description = """
Content Addressable Store
"""

[dependencies]
byteorder = "0.4.2"
libc = "0.2.7"
rustc-serialize = "0.3.18"
flate2 = "0.2.13"
rusqlite = "0.6.0"
uuid = "0.1.18"

# This is a testing dependency.
tempdir = "0.3.4"
rand = "0.3.13"

# This binary is mostly for testing purposes.  It exercises the
# library extensively.
[[bin]]
name = "cas"
test = false
doc = false
