[package]

name = "cas"
version = "0.1.1"
authors = [ "David Brown <davidb@davidb.org>" ]
license = "MIT"
description = """
Content Addressable Store
"""

[dependencies]
byteorder = "0.5.1"
libc = "0.2.8"
rustc-serialize = "0.3.18"
flate2 = "0.2.13"
rusqlite = "0.6.0"
uuid = { version = "0.2", features = ["v4"] }
rand = "0.3.14"
regex = "0.1.67"

[dev-dependencies]
tempdir = "0.3.4"

# This binary is mostly for testing purposes.  It exercises the
# library extensively.
[[bin]]
name = "cas"
test = false
doc = false

[[bin]]
name = "idx"
test = false
doc = false

[profile.release]
debug = true

# Optimize the dev version a bit, or some things are just too slow.
[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2
