[package]

name = "filer"
version = "0.1.1"
authors = [ "David Brown <davidb@davidb.org>" ]
license = "MIT"

[dependencies]
byteorder = "0.5.1"

# TODO: Test-only dependency
uuid = "0.1.18"
log = "0.3.5"
env_logger = "0.3.2"

[dependencies.cas]
path = "../cas"

[dev-dependencies]
tempdir = "0.3.4"
rand = "0.3.14"

[[bin]]
name = "filer"
test = false
doc = false

# Optimize the tests.  It compiles slower, and is harder to debug, but
# some of the tests are rather slow.  The debug assertions are still
# on.
[profile.test]
opt-level = 3
